content update in token setion

--- a/index.html
+++ b/index.html
@@ -294,37 +294,49 @@
             <div class="col-md-6 col-sm-12">
               <div class="pr_box animation" data-animation="fadeInUp" data-animation-delay="0.1s">
                 <h6>Starting time :</h6>
-                <p>April 23, 2018 (Monday 9:00 AM)</p>
+                <p>May 25, 2020 (9:00AM GMT)</p>
               </div>
             </div>
             <div class="col-md-6 col-sm-12">
               <div class="pr_box animation" data-animation="fadeInUp" data-animation-delay="0.2s">
-                <h6>Ending time :</h6>
-                <p>June 18, 2018 (Monday 11:00 PM)</p>
+                <h6>Start</h6>
+                <p>May 25, 2020 (9:00AM GMT)</p>
               </div>
             </div>
             <div class="col-md-6 col-sm-12">
               <div class="pr_box animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-                <h6>Market Caps :</h6>
-                <p>$ 118.23 (Billion)</p>
+                <h6>End</h6>
+                <p>December 25, 2020 (9:00AM GMT)</p>
               </div>
             </div>
             <div class="col-md-6 col-sm-12">
               <div class="pr_box animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-                <h6>Low - High 24h :</h6>
-                <p>$ 6,455.83 - $ 7,071.42</p>
+                <h6>End</h6>
+                <p>Aug 25, 2020 (11:00AM GMT)</p>
               </div>
             </div>
             <div class="col-md-6 col-sm-12">
               <div class="pr_box animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-                <h6>Available Token :</h6>
-                <p>$ 120 (Billion)</p>
+                <h6>Tokens exchange rate</h6>
+                <p>1 LPNT = 0.80 USD</p>
               </div>
             </div>
             <div class="col-md-6 col-sm-12">
               <div class="pr_box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
-                <h6>Acceptable Currency :</h6>
-                <p>BTC, Eth, Ltc</p>
+                <h6>Acceptable currencies</h6>
+                <p>ETH, BTC, BCH</p>
+              </div>
+            </div>
+            <div class="col-md-6 col-sm-12">
+              <div class="pr_box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
+                <h6>Minimal transaction amount</h6>
+                <p>$100.00</p>
+              </div>
+            </div>
+            <div class="col-md-6 col-sm-12">
+              <div class="pr_box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
+                <h6>Minimal transaction amount</h6>
+                <p>$100.00</p>
               </div>
             </div>
           </div>
