--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/responsive.css" />
   <link id="layoutstyle" rel="stylesheet" href="assets/color/theme.css" />
+
 </head>
 
 <body class="v_light" data-spy="scroll" data-offset="110">
@@ -221,57 +222,58 @@
       </div>
       <div class="divider large_divider"></div>
       <div class="row text-center">
-        <div class="col-lg-8 col-md-12 offset-lg-2">
+        <div class="col-lg-12 col-md-12">
           <div class="title_dark">
-            <span class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">Why Cryptoking</span>
+            <span class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">LPNT</span>
             <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
-              Competitive Benefit
+              Graph
             </h2>
-            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-              Competitive advantages are conditions that allow a company or
-              country to produce a good or service at equal value but at a
-              lower price or in a more desirable fashion
-            </p>
+          </div>
+          <p class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+            The list includes but is not limited to
+          </p>
+          <div class="row">
+            <div class="col-6">
+              <ul class="divider-ul">
+                <li>The multi-utility token</li>
+                <li>Decentralized cryptocurrency gateway</li>
+              </ul>
+            </div>
+            <div class="col-6">
+              <ul class="divider-ul">
+                <li>Pairing of LPN TOKEN with US Dollar</li>
+                <li>Decentralized cryptocurrency vault</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
       <div class="row text-center small_space benefit_wrap">
-        <div class="col-lg-2 col-md-4 col-6">
+        <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.1s">
-            <img src="assets/images/secure.png" alt="secure" />
+            <img src="assets/images/a1.png" alt="secure" />
             <h6>Safe & Secure</h6>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-6">
+        <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.2s">
-            <img src="assets/images/token.png" alt="token" />
+            <img src="assets/images/a2.png" alt="token" />
             <h6>Excerpt Tokens</h6>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-6">
+        <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-            <img src="assets/images/payment.png" alt="payment" />
+            <img src="assets/images/a3.png" alt="payment" />
             <h6>Easy Payment</h6>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-6">
+        <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-            <img src="assets/images/case.png" alt="case" />
+            <img src="assets/images/a4.png" alt="case" />
             <h6>Daily Cash Outs</h6>
           </div>
         </div>
-        <div class="col-lg-2 col-md-4 col-6">
-          <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-            <img src="assets/images/app.png" alt="app" />
-            <h6>Smart Application</h6>
-          </div>
-        </div>
-        <div class="col-lg-2 col-md-4 col-6">
-          <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
-            <img src="assets/images/dilution.png" alt="dilution" />
-            <h6>NO DILUTION</h6>
-          </div>
-        </div>
+        
       </div>
     </div>
     <div class="rounded_shape light_rounded_shape1"></div>
@@ -287,7 +289,7 @@
           <div class="title_dark">
             <span class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">Tokens</span>
             <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
-              Pricing & values
+              Sale
             </h2>
           </div>
           <div class="row">
@@ -348,6 +350,12 @@
               ICO is On Live NOW!
             </h2>
           </div>
+          <p class="mb-1">LUXURIOUS PRO NETWORK TOKEN is the first cryptocurrency with an existing community in the
+            blockchain
+            market.
+
+          </p>
+
           <div class="tk_countdown text-center animation countdown_shape" data-animation="fadeInUp"
             data-animation-delay="0.1s">
             <div class="tk_counter_inner">
@@ -356,6 +364,9 @@
             </div>
           </div>
         </div>
+        <p class="px-3">The final round of token sale is in progress and LPNT' price has incresed up to $1.20 USD. Only
+          40 million
+          LPN TOKENS will be available for sale instead of the full supply of 80 million LPN TOKENS.</p>
       </div>
       <div class="divider large_divider"></div>
       <div class="row text-center">
