--- a/index.html
+++ b/index.html
@@ -252,25 +252,25 @@
         <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.1s">
             <img src="assets/images/a1.png" alt="secure" />
-            <h6>Safe & Secure</h6>
+            <h6>Pairing with US Dollar</h6>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.2s">
             <img src="assets/images/a2.png" alt="token" />
-            <h6>Excerpt Tokens</h6>
+            <h6>A Decentralized Cryptocurrency Vault</h6>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.3s">
             <img src="assets/images/a3.png" alt="payment" />
-            <h6>Easy Payment</h6>
+            <h6>Decentralized Cryptocurrency Payment Gateway</h6>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.4s">
             <img src="assets/images/a4.png" alt="case" />
-            <h6>Daily Cash Outs</h6>
+            <h6>Multi-utility Token</h6>
           </div>
         </div>
         
