--- a/what-is-lpnt.html
+++ b/what-is-lpnt.html
@@ -30,6 +30,7 @@
   <link rel="stylesheet" href="assets/css/style.css" />
   <link rel="stylesheet" href="assets/css/responsive.css" />
   <link id="layoutstyle" rel="stylesheet" href="assets/color/theme.css" />
+  <link rel="stylesheet" href="assets/css/gurpreet.css" />
 
 </head>
 
@@ -165,7 +166,7 @@
         </div>
       </div>
 
-      <div class="row align-items-center">
+      <!-- <div class="row align-items-center">
         <div class="col-lg-5 col-md-12 col-sm-12">
           <div class="title_dark">
             <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">
@@ -217,7 +218,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="shape shap1"></div>
   </section>
@@ -227,60 +228,67 @@
   <section id="about" class="section_light_bg">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-6 col-md-6 col-sm-12">
+        <dv class="col-lg-12 col-md-12 col-sm-12">
           <div class="title_dark">
-            <span class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">What is LPNT?</span>
-            <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-              <!-- LPNT stands for the LUXURIOUS PRO NETWORK TOKEN, a decentralized multi-utility token. --> LPN TOKEN –
-              A cryptocurrency
+            <h2 class="text-center animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+              LPN TOKEN – A cryptocurrency
             </h2>
+          </div>
+        </dv>
+        <div class="the-legacy">
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="title_dark">
+              <!-- <h2 class="text-center animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+               LPN TOKEN – A cryptocurrency
+            </h2> -->
+              <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+                The legacy:
+              </h2>
 
-            <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-              The legacy:
-            </h2>
-
-
-            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-              LPN TOKEN is a multi-utility token based on ERC20. It is a blockchain-based asset that offers
-              functionality like the functionality of Ether. This is why LPN TOKEN is one of the best cryptocurrencies
-              to invest in. LPNT can be used for the following:
-            </p>
-            <div class="row">
-              <div class="col-lg-6 col-md-6 col-6">
-                <div class="animation animated fadeInUp" data-animation="fadeInUp" data-animation-delay="0.1s"
-                  style="animation-delay: 0.1s; visibility: visible;">
-                  <img src="assets/icon/exchange-of-money.png" alt="secure">
-                  <h6 class="text-center">Exchange of money.</h6>
+              <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
+                LPN TOKEN is a multi-utility token based on ERC20. It is a blockchain-based asset that offers
+                functionality like the functionality of Ether. This is why LPN TOKEN is one of the best cryptocurrencies
+                to invest in. LPNT can be used for the following:
+              </p>
+              <div class="row">
+                <div class="col-lg-6 col-md-6 col-6">
+                  <div class="animation animated fadeInUp" data-animation="fadeInUp" data-animation-delay="0.1s"
+                    style="animation-delay: 0.1s; visibility: visible;">
+                    <img src="assets/icon/exchange-of-money.png" alt="secure">
+                    <h6 class="text-center">Exchange of money.</h6>
+                  </div>
                 </div>
-              </div>
-              <div class="col-lg-6 col-md-6 col-6">
-                <div class="animation animated fadeInUp" data-animation="fadeInUp" data-animation-delay="0.1s"
-                  style="animation-delay: 0.1s; visibility: visible;">
-                  <img src="assets/icon/exchange-of-money.png" alt="secure">
-                  <h6 class="text-center">Transaction in a different way.</h6>
+                <div class="col-lg-6 col-md-6 col-6">
+                  <div class="animation animated fadeInUp" data-animation="fadeInUp" data-animation-delay="0.1s"
+                    style="animation-delay: 0.1s; visibility: visible;">
+                    <img src="assets/icon/exchange-of-money.png" alt="secure">
+                    <h6 class="text-center">Transaction in a different way.</h6>
+                  </div>
                 </div>
               </div>
             </div>
+          </div>
+          <div class="col-lg-6 col-md-6 col-sm-12">
+            <div class="title_dark">
+              <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
+                Key Specifications of LPNT
+              </h2>
+              <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
+                The list of its specifications includes but is not limited to the following only:
+              </p>
 
-            <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-              Key Specifications of LPNT
-            </h2>
-
-
-            <p class="animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-              The list of its specifications includes but is not limited to the following only:
-            </p>
-
-            <div class="key-specifications-of-LPNT">
-              <ul>
-                <li>This decentralized cryptocurrency leverages the potential of P2P (Peer-to-Peer) technology to ensure
-                  the hassle-free transfer of tokens from person to person using the internet. </li>
-                <li>Eliminates central repositories like banks or other authorities from the process to ensure speedy
-                  and low-cost transactions.</li>
-                <li>LPNT can be used in every country.</li>
-                <li>Your account cannot be frozen.</li>
-                <li>No arbitrary limits.</li>
-              </ul>
+              <div class="key-specifications-of-LPNT">
+                <ul>
+                  <li>This decentralized cryptocurrency leverages the potential of P2P (Peer-to-Peer) technology to
+                    ensure
+                    the hassle-free transfer of tokens from person to person using the internet. </li>
+                  <li>Eliminates central repositories like banks or other authorities from the process to ensure speedy
+                    and low-cost transactions.</li>
+                  <li>LPNT can be used in every country.</li>
+                  <li>Your account cannot be frozen.</li>
+                  <li>No arbitrary limits.</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
@@ -311,40 +319,94 @@
           <a href="#mobileapp" class="btn btn-default page-scroll animation" data-animation="fadeInUp"
             data-animation-delay="0.3s">Download App <i class="ion-ios-arrow-thin-right"></i></a>
         </div> -->
-        <div class="col-lg-7 col-md-12 col-sm-12">
-          <div class="work_box animation" data-animation="fadeInUp" data-animation-delay="0.4s">
+        <div class="col-lg-12 col-md-12 col-sm-12">
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.4s">
             <div class="box_inner">
               <i class="ion-person-add"></i>
-              <h4>Create Account</h4>
+              <h4>Speed</h4>
               <p>
-                Bitcoin Core, however, is a full node, meaning it helps verify
-                and transmit other Bitcoin transactions across the network and
-                stores copy of the entire blockchain.
+                Well, it is the best solution for ultra-fast contactless international transactions. Like said earlier,
+                it is based on the Ethereum blockchain.
+              </p>
+              <p> As a result, all transactions get completed within 15 seconds time only. This is why LPN TOKEN is fast
+                becoming the best cryptocurrency to invest in.
               </p>
             </div>
           </div>
-          <div class="work_box animation" data-animation="fadeInUp" data-animation-delay="0.5s">
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.5s">
             <div class="box_inner">
               <i class="ion-ios-locked"></i>
-              <h4>Safe & Secure</h4>
+              <h4>Access/Mobility </h4>
               <p>
-                We take careful measures to ensure that your bitcoin is as
-                safe as possible. Offline storage provides an important
-                security measure against theft or loss.
+                Paying with cryptocurrency is simple and convenient. Digital payments using smartphones instead of a
+                credit card is awfully convenient.
+              </p>
+              <p> This is where the LPN TOKEN proves to be the best cryptocurrency to invest in. Meaning, you can make
+                payments for anything using LPN TOKEN.
               </p>
             </div>
           </div>
-          <div class="work_box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
             <div class="box_inner">
               <i class="ion-android-cart"></i>
-              <h4>Buy & Sell</h4>
+              <h4>Low transaction fee & No charge back </h4>
               <p>
-                Blockchain works with exchange partners all around the world
-                to make buying bitcoin in your wallet both a seamless and
-                secure experience.
+                Most of the people feel this pain. But the use of LPN TOKEN takes this pain away.
+              </p>
+              <p>
+                Meaning, LPN TOKEN is the best cryptocurrency to invest in because its users do not have to worry about
+                expensive transaction fee and chargeback.
               </p>
             </div>
           </div>
+
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
+            <div class="box_inner">
+              <i class="ion-android-cart"></i>
+              <h4>International Use </h4>
+              <p>
+                Cryptocurrencies are a borderless means of exchange allowing for instant and cost-effective transactions
+                across the world.
+              </p>
+              <p>
+                There is no waiting, no international fees and no limitations as to who can or cannot send funds to whom
+                or when and where those funds can be accessed.
+              </p>
+            </div>
+          </div>
+
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
+            <div class="box_inner">
+              <i class="ion-android-cart"></i>
+              <h4>Safety & Reliability </h4>
+              <p>
+                LPN TOKEN makes use of several safety measures to make your experience positive.
+              </p>
+              <p>
+                The list of those safety measures includes but is not limited to cryptography, no data saving on our
+                servers, AVS, visual cryptograms and execution of measures to prevent search attacks to offer high-level
+                of security and reliability.
+              </p>
+            </div>
+          </div>
+
+          <div class="why-use-box animation" data-animation="fadeInUp" data-animation-delay="0.6s">
+            <div class="box_inner">
+              <i class="ion-android-cart"></i>
+              <h4>Blockchain Technology </h4>
+              <p>
+                Blockchain is a distributed ledger technology (DLT) for record-keeping of cryptocurrency transactions.
+              </p>
+              <p>
+                it is also a distributed database to achieve independent verification of the chain of ownership of any
+                and every Bitcoin amount.
+              </p>
+              <p>
+                All in all, LPN TOKEN is a decentralized and open-source cryptocurrency based on Ethereum Blockchain.
+              </p>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
