what is lpn token page done

--- a/index.html
+++ b/index.html
@@ -219,6 +219,9 @@
           <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" class="btn btn-default video animation"
             data-animation="fadeInUp" data-animation-delay="0.6s"><span class="ion-play"></span>Let's Start
             <i class="ion-ios-arrow-thin-right"></i></a>
+            <a href="what-is-lpnt.html" class="btn btn-default animation"
+            data-animation="fadeInUp" data-animation-delay="0.6s">Learn More
+            <i class="ion-ios-arrow-thin-right"></i></a>
         </div>
       </div>
       <div class="divider large_divider"></div>
@@ -1007,225 +1010,8 @@
         </div>
       </div>
       <div class="divider large_divider"></div>
-      <!-- <div class="row text-center">
-        <div class="col-md-12">
-          <div class="title_dark">
-            <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">
-              Our Invester
-            </h2>
-          </div>
-        </div>
-      </div>
-      <div class="row small_space justify-content-center">
-        <div class="col-lg-9 col-md-12">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-6 res_md_mb_30">
-              <div class="team_box animation" data-animation="fadeInUp" data-animation-delay="0.05s">
-                <div class="team_img text-center">
-                  <img src="assets/images/team5.jpg" alt="team5" />
-                  <div class="social_team list_none">
-                    <ul>
-                      <li>
-                        <a href="#"><i class="ion-social-linkedin"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="ion-social-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="ion-social-instagram-outline"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="ion-social-googleplus"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="team_info gradient_box text-center">
-                  <h4>
-                    <a href="#team5" class="content-popup">Joseph Conrad</a>
-                  </h4>
-                  <p>Invester</p>
-                </div>
-                <div id="team5" class="team_pop mfp-hide">
-                  <div class="row m-0">
-                    <div class="col-md-6">
-                      <img class="w-100 pt-3 pb-3" src="assets/images/team-lg-5.jpg" alt="user_img-lg" />
-                    </div>
-                    <div class="col-md-6">
-                      <div class="pt-3 pb-3">
-                        <div class="title_dark">
-                          <span>Invester</span>
-                          <h2>Joseph Conrad</h2>
-                        </div>
-                        <div class="social_single_team list_none">
-                          <ul>
-                            <li>
-                              <a href="#"><i class="ion-social-facebook"></i></a>
-                            </li>
-                            <li>
-                              <a href="#"><i class="ion-social-twitter"></i></a>
-                            </li>
-                            <li>
-                              <a href="#"><i class="ion-social-instagram-outline"></i></a>
-                            </li>
-                            <li>
-                              <a href="#"><i class="ion-social-googleplus"></i></a>
-                            </li>
-                          </ul>
-                        </div>
-                        <p>
-                          Founder of Venus Media Ltd and Owner of leading
-                          website for affiliates in the entertainment industry
-                          TakeBucks, he is a videographer, photographer and
-                          producer with a big number of successful
-                          entrepreneurships under his name over the last 18
-                          years.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6 col-sm-6 res_md_mb_30">
-              <div class="team_box animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-                <div class="team_img text-center">
-                  <img src="assets/images/team6.jpg" alt="team6" />
-                  <div class="social_team list_none">
-                    <ul>
-                      <li>
-                        <a href="#"><i class="ion-social-facebook"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="ion-social-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="ion-social-instagram-outline"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="ion-social-googleplus"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="team_info gradient_box text-center">
-                  <h4>
-                    <a href="#team6" class="content-popup">Julie Tokar</a>
-                  </h4>
-                  <p>Invester</p>
-                </div>
-                <div id="team6" class="team_pop mfp-hide">
-                  <div class="row m-0">
-                    <div class="col-md-6">
-                      <img class="w-100 pt-3 pb-3" src="assets/images/team-lg-6.jpg" alt="user_img-lg" />
-                    </div>
-                    <div class="col-md-6">
-                      <div class="pt-3 pb-3">
-                        <div class="title_dark">
-                          <span>Invester</span>
-                          <h2>Julie Tokar</h2>
-                        </div>
-                        <div class="social_single_team list_none">
-                          <ul>
-                            <li>
-                              <a href="#"><i class="ion-social-facebook"></i></a>
-                            </li>
-                            <li>
-                              <a href="#"><i class="ion-social-twitter"></i></a>
-                            </li>
-                            <li>
-                              <a href="#"><i class="ion-social-instagram-outline"></i></a>
-                            </li>
-                            <li>
-                              <a href="#"><i class="ion-social-googleplus"></i></a>
-                            </li>
-                          </ul>
-                        </div>
-                        <p>
-                          Founder of Venus Media Ltd and Owner of leading
-                          website for affiliates in the entertainment industry
-                          TakeBucks, he is a videographer, photographer and
-                          producer with a big number of successful
-                          entrepreneurships under his name over the last 18
-                          years.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 offset-lg-0 col-md-6 offset-md-3 col-sm-6 offset-sm-3">
-              <div class="team_box animation" data-animation="fadeInUp" data-animation-delay="0.7s">
-                <div class="team_img text-center">
-                  <img src="assets/images/team7.jpg" alt="team7" />
-                  <div class="social_team list_none">
-                    <ul>
-                      <li>
-                        <a href="#"><i class="ion-social-facebook"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="ion-social-twitter"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="ion-social-instagram-outline"></i></a>
-                      </li>
-                      <li>
-                        <a href="#"><i class="ion-social-googleplus"></i></a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="team_info gradient_box text-center">
-                  <h4>
-                    <a href="#team7" class="content-popup">Sandhya Rani</a>
-                  </h4>
-                  <p>Invester</p>
-                </div>
-                <div id="team7" class="team_pop mfp-hide">
-                  <div class="row m-0">
-                    <div class="col-md-6">
-                      <img class="w-100 pt-3 pb-3" src="assets/images/team-lg-7.jpg" alt="user_img-lg" />
-                    </div>
-                    <div class="col-md-6">
-                      <div class="pt-3 pb-3">
-                        <div class="title_dark">
-                          <span>Invester</span>
-                          <h2>Sandhya Rani</h2>
-                        </div>
-                        <div class="social_single_team list_none">
-                          <ul>
-                            <li>
-                              <a href="#"><i class="ion-social-facebook"></i></a>
-                            </li>
-                            <li>
-                              <a href="#"><i class="ion-social-twitter"></i></a>
-                            </li>
-                            <li>
-                              <a href="#"><i class="ion-social-instagram-outline"></i></a>
-                            </li>
-                            <li>
-                              <a href="#"><i class="ion-social-googleplus"></i></a>
-                            </li>
-                          </ul>
-                        </div>
-                        <p>
-                          Founder of Venus Media Ltd and Owner of leading
-                          website for affiliates in the entertainment industry
-                          TakeBucks, he is a videographer, photographer and
-                          producer with a big number of successful
-                          entrepreneurships under his name over the last 18
-                          years.
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div> -->
+     
+
       <div id="faq">
         <div class="divider large_divider"></div>
         <div class="row text-center">
