New chagnes by rishav

--- a/index.html
+++ b/index.html
@@ -332,6 +332,8 @@
             <div class="res_md_mt_50 res_sm_mt_30 animation" data-animation="fadeInRight" data-animation-delay="0.1s">
               <img src="assets/images/ico-app-img.png" alt="mobile" />
             </div>
+            <a href="#" class="btn btn-default page-scroll animation" data-animation="fadeInUp"
+            data-animation-delay="0.3s">Learn More <i class="ion-ios-arrow-thin-right"></i></a>
           </div>
         </div>
       </div>
