New chagnes by rishav

--- a/index.html
+++ b/index.html
@@ -2170,6 +2170,7 @@
     });
 
   </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
 </body>
 
 </html>
