New chagnes by rishav

--- a/ico.html
+++ b/ico.html
@@ -490,9 +490,9 @@
         
         <div class="container">
             <div class="title_dark">
-                <span class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">LPNT </span>
+                <span class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">Token </span>
                 <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-                    TOKEN SUPPLY
+                    FINANCIAL INCENTIVES <p>Financial incentives Of Embracing LPN TOKEN During ICO Campaign:</P>
                 </h2>
             </div>
             <div class="row text-center">
