--- a/ico.html
+++ b/ico.html
@@ -52,7 +52,7 @@
     <header class="header_wrap fixed-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand page-scroll animation" href="#home" data-animation="fadeInLeft"
+                <a class="navbar-brand page-scroll animation" href="index.html" data-animation="fadeInLeft"
                     data-animation-delay="0.8s">
                     <img class="logo_light" src="assets/images/logo.svg" alt="logo" />
                 </a>
@@ -64,29 +64,28 @@
 
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                     <ul class="navbar-nav animation" data-animation="fadeInDown" data-animation-delay="1.2s">
-                        <li>
-                            <a class="nav-link page-scroll" href="#how_it_work">How it Work</a>
-                        </li>
-                        <li><a class="nav-link page-scroll" href="#about">About</a></li>
-                        <li><a class="nav-link page-scroll" href="#token">Token</a></li>
-                        <li>
-                            <a class="nav-link page-scroll" href="#road_map">Road Map</a>
-                        </li>
-                        <li><a class="nav-link page-scroll" href="#team">Team</a></li>
-                        <li><a class="nav-link page-scroll" href="#faq">FAQ</a></li>
-                        <li>
-                            <a class="nav-link page-scroll" href="#contact">Contact</a>
-                        </li>
+                      <li>
+                        <a class="nav-link page-scroll" href="index.html">HOME</a>
+                      </li>
+                      <li><a class="nav-link page-scroll" href="what-is-lpnt.html">WHAT IS LPNT</a></li>
+                      <li><a class="nav-link page-scroll" href="ico.html">ICO</a></li>
+                      <li>
+                        <a class="nav-link page-scroll" href="#road_map">ROADMAP</a>
+                      </li>
+                      <li><a class="nav-link page-scroll" href="#team">ATTRIBUTES</a></li>
+                      <li><a class="nav-link page-scroll" href="#faq">COMMUNITY</a></li>
+                      <li>
+                        <a class="nav-link page-scroll" href="#contact">BLOG</a>
+                      </li>
+                      <li>
+                        <a class="nav-link page-scroll" href="#contact">FAQ</a>
+                      </li>
+                      <li>
+                        <a class="nav-link page-scroll" href="#contact">CONTACT US</a>
+                      </li>
                     </ul>
-                    <ul class="navbar-nav nav_btn animation" data-animation="fadeInRight" data-animation-delay="1.6s">
-                        <li>
-                            <a class="btn btn-default" href="login-light.html">Login</a>
-                        </li>
-                        <li>
-                            <a class="nav-link page-scroll btn btn-default" href="#mobileapp">Our App</a>
-                        </li>
-                    </ul>
-                </div>
+                   
+                  </div>
             </nav>
         </div>
     </header>
