--- a/index.html
+++ b/index.html
@@ -69,18 +69,18 @@
             <li><a class="nav-link page-scroll" href="what-is-lpnt.html">WHAT IS LPNT</a></li>
             <li><a class="nav-link page-scroll" href="ico.html">ICO</a></li>
             <li>
-              <a class="nav-link page-scroll" href="#road_map">ROADMAP</a>
+              <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
             </li>
-            <li><a class="nav-link page-scroll" href="#team">ATTRIBUTES</a></li>
-            <li><a class="nav-link page-scroll" href="#faq">COMMUNITY</a></li>
+            <li><a class="nav-link page-scroll" href="attributes.html">ATTRIBUTES</a></li>
+            <li><a class="nav-link page-scroll" href="community.html">COMMUNITY</a></li>
             <li>
-              <a class="nav-link page-scroll" href="#contact">BLOG</a>
-            </li>
-            <li>
-              <a class="nav-link page-scroll" href="#contact">FAQ</a>
+              <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
             </li>
             <li>
-              <a class="nav-link page-scroll" href="#contact">CONTACT US</a>
+              <a class="nav-link page-scroll" href="FAQ.html">FAQ</a>
+            </li>
+            <li>
+              <a class="nav-link page-scroll" href="contact.html">CONTACT US</a>
             </li>
           </ul>
          
