--- a/roadmap.html
+++ b/roadmap.html
@@ -154,7 +154,7 @@
           <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" class="btn btn-default video animation"
             data-animation="fadeInUp" data-animation-delay="0.6s"><span class="ion-play"></span>Let's Start
             <i class="ion-ios-arrow-thin-right"></i></a>
-            
+
         </div>
       </div>
     </div>
@@ -307,7 +307,8 @@
                 <div class="col-lg-6 col-md-6 col-6">
                   <div class="animation animated fadeInUp" data-animation="fadeInUp" data-animation-delay="0.1s"
                     style="animation-delay: 0.1s; visibility: visible;">
-                    <div class="excahnage_icon"> <img src="assets/icon/Transaction-in-a-different-way.png" alt="secure"> </div>
+                    <div class="excahnage_icon"> <img src="assets/icon/Transaction-in-a-different-way.png" alt="secure">
+                    </div>
                     <h6 class="text-center">Transaction in a different way.</h6>
                   </div>
                 </div>
