--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <strong> Four Key Pillars of LUXURIOUS PRO NETWORK TOKEN </strong><br> The list includes but is not limited
             to
           </p>
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-6">
               <ul class="divider-ul">
                 <li><i class="fa fa-check" aria-hidden="true"></i>A multi-utility token</li>
@@ -250,33 +250,33 @@
                 <li><i class="fa fa-check" aria-hidden="true"></i>A decentralized cryptocurrency vault</li>
               </ul>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="row text-center small_space benefit_wrap">
         <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.1s">
             <img src="assets/images/a1.png" alt="secure" />
-            <h6>Pairing with US Dollar</h6>
           </div>
+          <p>Pairing of LPN TOKEN with US Dollar</p>
         </div>
         <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.2s">
-            <img src="assets/images/a2.png" alt="token" />
-            <h6>A Decentralized Cryptocurrency Vault</h6>
+            <img src="assets/icon/LPN-decentralized-cryptocurrency-vault.png" alt="token" />
           </div>
+          <p>A decentralized cryptocurrency vault</p>
         </div>
         <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-            <img src="assets/images/a3.png" alt="payment" />
-            <h6>Decentralized Cryptocurrency Payment Gateway</h6>
+            <img src="assets/icon/gateway.png" alt="payment" />
           </div>
+          <p>A decentralized cryptocurrency gateway</p>
         </div>
         <div class="col-lg-3 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-            <img src="assets/images/a4.png" alt="case" />
-            <h6>Multi-utility Token</h6>
+            <img src="assets/icon/multi.png" alt="case" />
           </div>
+          <p>A multi-utility token</p>
         </div>
 
       </div>
