--- a/what-is-lpnt.html
+++ b/what-is-lpnt.html
@@ -578,22 +578,24 @@
             </div>
             <ul class="list_none footer_social">
               <li class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">
-                <a href="https://www.facebook.com/LpnTokenPro/"><i class="ion-social-facebook"></i></a>
+                  <a href="https://www.facebook.com/LpnTokenPro/"><i class="ion-social-facebook"></i></a>
               </li>
               <li class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-                <a href="https://twitter.com/lpntoken"><i class="ion-social-twitter"></i></a>
+                  <a href="https://twitter.com/lpntoken"><i class="ion-social-twitter"></i></a>
               </li>
               <li class="animation" data-animation="fadeInUp" data-animation-delay="0.5s">
-                <a href="https://www.youtube.com/watch?v=S1zQs14uxK8"><i class="ion-social-youtube"></i></a>
+                  <a href="https://www.youtube.com/watch?v=S1zQs14uxK8"><i
+                          class="ion-social-youtube"></i></a>
               </li>
               <li class="animation" data-animation="fadeInUp" data-animation-delay="0.7s">
-                <a href="https://www.linkedin.com/company/luxurious-pro-network-token/"><i
-                    class="ion-social-linkedin"></i></a>
+                  <a href="https://www.linkedin.com/company/luxurious-pro-network-token/"><i
+                          class="ion-social-linkedin"></i></a>
               </li>
               <li class="animation" data-animation="fadeInUp" data-animation-delay="0.9s">
-                <a href="https://t.me/LPNT_Official"><i class="fa fa-telegram" aria-hidden="true"></i></a>
+                  <a href="https://t.me/LPNT_Official"><i class="fa fa-telegram"
+                          aria-hidden="true"></i></a>
               </li>
-            </ul>
+          </ul>
           </div>
         </div>
       </div>
