--- a/attributes.html
+++ b/attributes.html
@@ -377,7 +377,7 @@
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <div class="animation res_sm_mb_30" data-animation="fadeInLeft" data-animation-delay="0.1s">
+          <div class="animation res_sm_mb_30 text-center" data-animation="fadeInLeft" data-animation-delay="0.1s">
             <img src="assets/icon/LPN-decentralized-cryptocurrency-vault.png" alt="aboutimg" />
           </div>
         </div>
