--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <a class="nav-link page-scroll" href="contact.html">CONTACT US</a>
             </li>
           </ul>
-         
+
         </div>
       </nav>
     </div>
@@ -98,7 +98,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12 order-lg-first text_md_center">
           <div class="banner_text">
             <h1 class="animation" data-animation="fadeInUp" data-animation-delay="1.5s">
-              <span>LUXURIOUS PRO NETWORK TOKEN</span> GROUP
+              <span>LUXURIOUS PRO NETWORK </span> GROUP
             </h1>
             <h3 class="animation" data-animation="fadeInUp" data-animation-delay="1.6s">
               A Global Leader In The Domain Of Luxurious Transportation And Forex Trading.
@@ -116,7 +116,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12 order-first">
           <div class="banner_image_right res_md_mb_50 res_xs_mb_30 animation" data-animation="fadeInRight"
             data-animation-delay="1.5s">
-            <img src="assets/images/banner_vector.png" alt="banner_vector" />
+            <img src="assets/icon/home_header.png" alt="banner_vector" />
           </div>
         </div>
       </div>
@@ -192,7 +192,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6 col-md-6 col-sm-12">
           <div class="animation res_sm_mb_30" data-animation="fadeInLeft" data-animation-delay="0.1s">
-            <img src="assets/images/about_img.png" alt="aboutimg" />
+            <img src="assets/icon/what-is-lpn-token.png" alt="" />
           </div>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
@@ -219,8 +219,8 @@
           <a href="https://www.youtube.com/watch?v=S1zQs14uxK8" class="btn btn-default video animation"
             data-animation="fadeInUp" data-animation-delay="0.6s"><span class="ion-play"></span>Let's Start
             <i class="ion-ios-arrow-thin-right"></i></a>
-            <a href="what-is-lpnt.html" class="btn btn-default animation"
-            data-animation="fadeInUp" data-animation-delay="0.6s">Learn More
+          <a href="what-is-lpnt.html" class="btn btn-default animation" data-animation="fadeInUp"
+            data-animation-delay="0.6s">Learn More
             <i class="ion-ios-arrow-thin-right"></i></a>
         </div>
       </div>
@@ -335,7 +335,7 @@
               <img src="assets/images/ico-app-img.png" alt="mobile" />
             </div>
             <a href="ico.html" class="btn btn-default page-scroll animation" data-animation="fadeInUp"
-            data-animation-delay="0.3s">Learn More <i class="ion-ios-arrow-thin-right"></i></a>
+              data-animation-delay="0.3s">Learn More <i class="ion-ios-arrow-thin-right"></i></a>
           </div>
         </div>
       </div>
@@ -1158,7 +1158,7 @@
         </div>
       </div>
       <div class="divider large_divider"></div>
-     
+
 
       <div id="faq">
         <div class="divider large_divider"></div>
