new changes done

--- a/what-is-lpnt.html
+++ b/what-is-lpnt.html
@@ -47,9 +47,9 @@
   </div>
   <!-- END LOADER -->
 
-  <!-- START HEADER -->
-  <header class="header_wrap fixed-top">
-    <div class="container">
+   <!-- START HEADER -->
+   <header class="header_wrap fixed-top">
+    <div class="container-fluid">
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand page-scroll animation" href="index.html" data-animation="fadeInLeft"
           data-animation-delay="0.8s">
@@ -82,6 +82,7 @@
             <li>
               <a class="nav-link page-scroll" href="contact.html">CONTACT US</a>
             </li>
+            <li><a href="#" class="btn btn-default">Registration</a></li>
           </ul>
 
         </div>
