--- a/Team.html
+++ b/Team.html
@@ -49,47 +49,48 @@
     <!-- END LOADER -->
 
     <!-- START HEADER -->
-    <header class="header_wrap fixed-top">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg">
-                <a class="navbar-brand page-scroll animation" href="index.html" data-animation="fadeInLeft"
-                    data-animation-delay="0.8s">
-                    <img class="logo_light" src="assets/images/logo.svg" alt="logo" />
-                </a>
-                <button class="navbar-toggler animation" data-animation="fadeInRight" data-animation-delay="1.2s"
-                    type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="ion-android-menu"></span>
-                </button>
+  <header class="header_wrap fixed-top">
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand page-scroll animation" href="index.html" data-animation="fadeInLeft"
+          data-animation-delay="0.8s">
+          <img class="logo_light" src="assets/images/logo.svg" alt="logo" />
+        </a>
+        <button class="navbar-toggler animation" data-animation="fadeInRight" data-animation-delay="1.2s" type="button"
+          data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+          <span class="ion-android-menu"></span>
+        </button>
 
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav animation" data-animation="fadeInDown" data-animation-delay="1.2s">
-                        <li>
-                            <a class="nav-link page-scroll" href="index.html">HOME</a>
-                        </li>
-                        <li><a class="nav-link page-scroll" href="what-is-lpnt.html">WHAT IS LPNT</a></li>
-                        <li><a class="nav-link page-scroll" href="ico.html">ICO</a></li>
-                        <li>
-                            <a class="nav-link page-scroll" href="#road_map">ROADMAP</a>
-                        </li>
-                        <li><a class="nav-link page-scroll" href="#team">ATTRIBUTES</a></li>
-                        <li><a class="nav-link page-scroll" href="#faq">COMMUNITY</a></li>
-                        <li>
-                            <a class="nav-link page-scroll" href="#contact">BLOG</a>
-                        </li>
-                        <li>
-                            <a class="nav-link page-scroll" href="#contact">FAQ</a>
-                        </li>
-                        <li>
-                            <a class="nav-link page-scroll" href="#contact">CONTACT US</a>
-                        </li>
-                    </ul>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+          <ul class="navbar-nav animation" data-animation="fadeInDown" data-animation-delay="1.2s">
+            <li>
+              <a class="nav-link page-scroll" href="#home">HOME</a>
+            </li>
+            <li><a class="nav-link page-scroll" href="what-is-lpnt.html">WHAT IS LPNT</a></li>
+            <li><a class="nav-link page-scroll" href="ico.html">ICO</a></li>
+            <li>
+              <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
+            </li>
+            <li><a class="nav-link page-scroll" href="attributes.html">ATTRIBUTES</a></li>
+            <li><a class="nav-link page-scroll" href="community.html">COMMUNITY</a></li>
+            <li>
+              <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
+            </li>
+            <li>
+              <a class="nav-link page-scroll" href="FAQ.html">FAQ</a>
+            </li>
+            <li>
+              <a class="nav-link page-scroll" href="contact.html">CONTACT US</a>
+            </li>
+            <li><a href="#" class="btn btn-default">Registration</a></li>
+          </ul>
 
-                </div>
-            </nav>
         </div>
-    </header>
-    <!-- START HEADER -->
+      </nav>
+    </div>
+  </header>
+  <!-- START HEADER -->
 
     <!-- START SECTION BANNER -->
     <section id="home" class="banner_section section_light_bg">
