--- a/attributes.html
+++ b/attributes.html
@@ -49,7 +49,7 @@
 
   <!-- START HEADER -->
   <header class="header_wrap fixed-top">
-    <div class="container">
+    <div class="container-fluid">
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand page-scroll animation" href="index.html" data-animation="fadeInLeft"
           data-animation-delay="0.8s">
@@ -82,8 +82,9 @@
             <li>
               <a class="nav-link page-scroll" href="contact.html">CONTACT US</a>
             </li>
+            <li><a href="#" class="btn btn-default">Registration</a></li>
           </ul>
-         
+
         </div>
       </nav>
     </div>
