--- a/ico.html
+++ b/ico.html
@@ -2,93 +2,93 @@
 <html lang="en">
 
 <head>
-  <!-- Meta -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Cryptoking is Professional Creative Template" />
-  <!-- SITE TITLE -->
-  <title>
-    LPNT - LUXURIOUS PRO NETWORK TOKEN
-  </title>
-  <!-- Favicon Icon -->
-  <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
-  <!-- Animation CSS -->
-  <link rel="stylesheet" href="assets/css/animate.css" />
-  <!-- Latest Bootstrap min CSS -->
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
-  <!-- Font Awesome CSS -->
-  <link rel="stylesheet" href="assets/css/ionicons.min.css" />
-  <!--- owl carousel CSS-->
-  <link rel="stylesheet" href="assets/owlcarousel/css/owl.carousel.min.css" />
-  <link rel="stylesheet" href="assets/owlcarousel/css/owl.theme.css" />
-  <!-- Magnific Popup CSS -->
-  <link rel="stylesheet" href="assets/css/magnific-popup.css" />
-  <!-- Style CSS -->
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="assets/css/responsive.css" />
-  <link id="layoutstyle" rel="stylesheet" href="assets/color/theme.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/css/rishav.css">
+    <!-- Meta -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Cryptoking is Professional Creative Template" />
+    <!-- SITE TITLE -->
+    <title>
+        LPNT - LUXURIOUS PRO NETWORK TOKEN
+    </title>
+    <!-- Favicon Icon -->
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
+    <!-- Animation CSS -->
+    <link rel="stylesheet" href="assets/css/animate.css" />
+    <!-- Latest Bootstrap min CSS -->
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css" />
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet" />
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="assets/css/ionicons.min.css" />
+    <!--- owl carousel CSS-->
+    <link rel="stylesheet" href="assets/owlcarousel/css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="assets/owlcarousel/css/owl.theme.css" />
+    <!-- Magnific Popup CSS -->
+    <link rel="stylesheet" href="assets/css/magnific-popup.css" />
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
+    <link id="layoutstyle" rel="stylesheet" href="assets/color/theme.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/rishav.css">
 
 </head>
 
 <body class="v_light" data-spy="scroll" data-offset="110">
-  <!-- LOADER -->
-  <div class="preloader">
-    <div id="g-spinner" class="loading">
-      <div class="circle c1"></div>
-      <div class="circle c2"></div>
-      <div class="circle c3"></div>
-      <div class="circle c4"></div>
-    </div>
-  </div>
-  <!-- END LOADER -->
-
-  <!-- START HEADER -->
-  <header class="header_wrap fixed-top">
-    <div class="container">
-      <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand page-scroll animation" href="index.html" data-animation="fadeInLeft"
-          data-animation-delay="0.8s">
-          <img class="logo_light" src="assets/images/logo.svg" alt="logo" />
-        </a>
-        <button class="navbar-toggler animation" data-animation="fadeInRight" data-animation-delay="1.2s" type="button"
-          data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-          aria-expanded="false" aria-label="Toggle navigation">
-          <span class="ion-android-menu"></span>
-        </button>
-
-        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-          <ul class="navbar-nav animation" data-animation="fadeInDown" data-animation-delay="1.2s">
-            <li>
-              <a class="nav-link page-scroll" href="#home">HOME</a>
-            </li>
-            <li><a class="nav-link page-scroll" href="what-is-lpnt.html">WHAT IS LPNT</a></li>
-            <li><a class="nav-link page-scroll" href="ico.html">ICO</a></li>
-            <li>
-              <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
-            </li>
-            <li><a class="nav-link page-scroll" href="attributes.html">ATTRIBUTES</a></li>
-            <li><a class="nav-link page-scroll" href="community.html">COMMUNITY</a></li>
-            <li>
-                <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
-            </li>
-            <li>
-              <a class="nav-link page-scroll" href="FAQ.html">FAQ</a>
-            </li>
-            <li>
-              <a class="nav-link page-scroll" href="contact.html">CONTACT US</a>
-            </li>
-          </ul>
-         
+    <!-- LOADER -->
+    <div class="preloader">
+        <div id="g-spinner" class="loading">
+            <div class="circle c1"></div>
+            <div class="circle c2"></div>
+            <div class="circle c3"></div>
+            <div class="circle c4"></div>
         </div>
-      </nav>
     </div>
-  </header>
-  <!-- START HEADER -->
+    <!-- END LOADER -->
+    <!-- START HEADER -->
+    <header class="header_wrap fixed-top">
+        <div class="container-fluid">
+            <nav class="navbar navbar-expand-lg">
+                <a class="navbar-brand page-scroll animation" href="index.html" data-animation="fadeInLeft"
+                    data-animation-delay="0.8s">
+                    <img class="logo_light" src="assets/images/logo.svg" alt="logo" />
+                </a>
+                <button class="navbar-toggler animation" data-animation="fadeInRight" data-animation-delay="1.2s"
+                    type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="ion-android-menu"></span>
+                </button>
+
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav animation" data-animation="fadeInDown" data-animation-delay="1.2s">
+                        <li>
+                            <a class="nav-link page-scroll" href="#home">HOME</a>
+                        </li>
+                        <li><a class="nav-link page-scroll" href="what-is-lpnt.html">WHAT IS LPNT</a></li>
+                        <li><a class="nav-link page-scroll" href="ico.html">ICO</a></li>
+                        <li>
+                            <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
+                        </li>
+                        <li><a class="nav-link page-scroll" href="attributes.html">ATTRIBUTES</a></li>
+                        <li><a class="nav-link page-scroll" href="community.html">COMMUNITY</a></li>
+                        <li>
+                            <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
+                        </li>
+                        <li>
+                            <a class="nav-link page-scroll" href="FAQ.html">FAQ</a>
+                        </li>
+                        <li>
+                            <a class="nav-link page-scroll" href="contact.html">CONTACT US</a>
+                        </li>
+                        <li><a href="#" class="btn btn-default">Registration</a></li>
+                    </ul>
+
+                </div>
+            </nav>
+        </div>
+    </header>
+    <!-- START HEADER -->
 
     <!-- START SECTION BANNER -->
     <section id="home" class="banner_section section_light_bg">
@@ -98,17 +98,17 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 order-lg-first text_md_center">
                     <div class="banner_text">
                         <h1 class="animation" data-animation="fadeInUp" data-animation-delay="1.5s">
-                            <span>INTRODUCTION TO </span> LUXURIOUS PRO NETWORK TOKEN ICO
+                            <span>LUXURIOUS PRO NETWORK </span> TOKEN ICO
                         </h1>
                         <h3 class="animation" data-animation="fadeInUp" data-animation-delay="1.6s">
-                            A Cryptocurrency Adding Value To The Financial Experience Of Everyone
+                            Leveraging The Potential Of A Financial Tool And Benefitting Users
                         </h3>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 order-first">
                     <div class="banner_image_right res_md_mb_50 res_xs_mb_30 animation" data-animation="fadeInRight"
                         data-animation-delay="1.5s">
-                        <img src="assets/images/banner_vector.png" alt="banner_vector" />
+                        <img src="assets/icon/icon_graphics.png" alt="banner_vector" />
                     </div>
                 </div>
             </div>
