--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
             <div id="team1" class="team_pop mfp-hide">
               <div class="row m-0">
                 <div class="col-md-6">
-                  <img class="w-100 pt-3 pb-3" src="assets/images/team1.png" alt="user_img-lg" />
+                  <img class="w-100 pt-3 pb-3" src="assets/images/team/satish-kumar-mostra.png" alt="user_img-lg" />
                 </div>
                 <div class="col-md-6">
                   <div class="pt-3 pb-3">
@@ -947,7 +947,7 @@
             <div id="team2" class="team_pop mfp-hide">
               <div class="row m-0">
                 <div class="col-md-6">
-                  <img class="w-100 pt-3 pb-3" src="assets/images/team2.png" alt="user_img-lg" />
+                  <img class="w-100 pt-3 pb-3" src="assets/images/team/happy-shekh.png" alt="user_img-lg" />
                 </div>
                 <div class="col-md-6">
                   <div class="pt-3 pb-3">
@@ -1047,7 +1047,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6 res_xs_mb_30">
           <div class="team_box animation" data-animation="fadeInUp" data-animation-delay="0.7s">
             <div class="team_img text-center">
-              <img src="assets/images/team3.png" alt="team3" />
+              <img src="assets/images/team/rovinder-banger.png" alt="team3" />
               <div class="social_team list_none">
                 <ul>
                   <li>
@@ -1099,7 +1099,7 @@
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="team_box animation" data-animation="fadeInUp" data-animation-delay="1s">
             <div class="team_img text-center">
-              <img src="assets/images/team4.png" alt="team4" />
+              <img src="assets/images/team/gurpreet-singh.png" alt="team4" />
               <div class="social_team list_none">
                 <ul>
                   <li>
@@ -1163,6 +1163,10 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="team-d text-center mt-4">
+        <p>Want to know more about team?</p>
+        <a href="Team.html" class="btn btn-default">Learn More</a>
       </div>
       <div class="divider large_divider"></div>
 
