--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
               <span class="lpnspeed-bar"></span>
             </span>
             <div class="inner-circle"></div>
-            <div class="lpnspeed-value"><span>One</span>Week</div>
+            <div class="lpnspeed-value"><span>1</span>Week</div>
           </div>
           <H5 class="text-center mt-4">TRADITIONAL SYSTEM</H5>
         </div>
