--- a/Team.html
+++ b/Team.html
@@ -40,12 +40,13 @@
     <!-- LOADER -->
     <div class="preloader">
         <div id="g-spinner" class="loading">
-            <div class="circle c1"></div>
-            <div class="circle c2"></div>
-            <div class="circle c3"></div>
-            <div class="circle c4"></div>
+          <!-- <div class="circle c1"></div>
+          <div class="circle c2"></div>
+          <div class="circle c3"></div>
+          <div class="circle c4"></div> -->
+          <img src="assets/icon/loading_icon.png">
         </div>
-    </div>
+      </div>
     <!-- END LOADER -->
 
     <!-- START HEADER -->
