--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-6">
           <div class="benefit_box animation" data-animation="fadeInUp" data-animation-delay="0.4s">
-            <img src="assets/icon/multi.png" alt="case" />
+            <img src="assets/images/uti.png" alt="case" />
           </div>
           <p>A multi-utility walllet</p>
         </div>
