--- a/index.html
+++ b/index.html
@@ -231,11 +231,11 @@
           <div class="title_dark">
             <span class="animation" data-animation="fadeInUp" data-animation-delay="0.1s">LPNT</span>
             <h2 class="animation" data-animation="fadeInUp" data-animation-delay="0.2s">
-              Graph
+              Products
             </h2>
           </div>
           <p class="animation" data-animation="fadeInUp" data-animation-delay="0.3s">
-            <strong> Four Key Pillars of LUXURIOUS PRO NETWORK TOKEN </strong><br> The list includes but is not limited
+            <strong> Five Key Pillars of LUXURIOUS PRO NETWORK TOKEN </strong><br> The list includes but is not limited
             to
           </p>
           <!-- <div class="row">
@@ -1731,7 +1731,7 @@
         </div>
         <div class="col-lg-4 offset-lg-1 col-md-5">
           <div class="res_md_mt_30 animation" data-animation="fadeInRight" data-animation-delay="0.1s">
-            <img alt="whitepaper" src="assets/images/whitepaper.png" />
+            <img alt="whitepaper" src="assets/images/white.jpg" />
           </div>
         </div>
       </div>
@@ -1783,28 +1783,29 @@
           </div>
           <div class="col-lg-5 col-md-5 res_sm_mt_30">
             <ul class="list_none contact_info mt-margin">
-              <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
+              <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
                 data-animation-delay="0.1s">
                 <i class="ion-ios-location"></i>
                 <div class="contact_detail">
                   <span>Address</span>
                   <p>22 International Division Via G.B. Pirelli</p>
                 </div>
-              </li>
-              <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
+              </li> -->
+              <!-- <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
                 data-animation-delay="0.2s">
                 <i class="ion-android-call"></i>
                 <div class="contact_detail">
                   <span>Phone</span>
                   <p>+23 0123 4567</p>
                 </div>
-              </li>
+              </li> -->
               <li class="input-group-prepend align-items-center animation" data-animation="fadeInUp"
                 data-animation-delay="0.3s">
                 <i class="ion-ios-email"></i>
                 <div class="contact_detail">
                   <span>Email</span>
-                  <p>Yourmail@gmail.com</p>
+                  <p>support@lpntoken.io</p>
+                  <p>info@lpntoken.io</p>
                 </div>
               </li>
             </ul>
