--- a/roadmap.html
+++ b/roadmap.html
@@ -111,7 +111,7 @@
         <div class="col-lg-6 col-md-12 col-sm-12 order-first">
           <div class="banner_image_right res_md_mb_50 res_xs_mb_30 animation" data-animation="fadeInRight"
             data-animation-delay="1.5s">
-            <img src="assets/images/banner_vector.png" alt="banner_vector" />
+            <img src="assets/icon/roadmap.png" alt="banner_vector" />
           </div>
         </div>
       </div>
@@ -131,7 +131,7 @@
       <div class="row">
         <div class="col-sm-6 p-0">
           <div class="content_text_block text-center roadmap_left_block pink_bg equal-height">
-            <img src="assets/images/road.png" alt="image" data-aos="zoom-in-right">
+            <img src="assets/icon/roadmap_2.png" alt="image" data-aos="zoom-in-right">
           </div>
         </div>
         <div class="col-sm-6  p-0">
