--- a/attributes.html
+++ b/attributes.html
@@ -72,7 +72,7 @@
             <li>
               <a class="nav-link page-scroll" href="roadmap.html">ROADMAP</a>
             </li>
-            <li><a class="nav-link page-scroll" href="attributes.html">ATTRIBUTES</a></li>
+            <li><a class="nav-link page-scroll" href="attributes.html">Services INSITE</a></li>
             <li><a class="nav-link page-scroll" href="community.html">COMMUNITY</a></li>
             <li>
               <a class="nav-link page-scroll" href="http://blog.lpntoken.io/" target="_blank">BLOG</a>
